--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -2,11 +2,11 @@
 {% with p.promoted_page.specific as promoted_page %}    
     <div class="swiper-slide promo-card">
         <a href="{% pageurl promoted_page %}">
-            <div class="card shadow-lg" style="width: 100%;">
+            <div class="card shadow-lg">
                 {% with promoted_page.main_image as main_image %}
                     {% if main_image %}{% lazy_image main_image fill-748x380-c100 class="card-img-top lazy" %}{% endif %}
                 {% endwith %}
-                <div class="card-body card-color" style="height: 15vh;">
+                <div class="card-body card-color">
                     <h5 class="card-title">{{ promoted_page.title }}</h5>
                     <button class="color-fluid">
                         <a href="{% pageurl promoted_page %}" class="mt-2 white">Learn more</a>
@@ -14,8 +14,8 @@
                 </div>
             </div>
         </a>
-        <div class="caption-banner">
-            <p style="color: white;">{{ p.caption }}</p>
+        <div class="promotion-caption">
+            {{ p.caption }}
         </div>
     </div>
 {% endwith %}
