--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -3,7 +3,6 @@
 {% load wagtailcore_tags wagtailimages_tags lazyimages_tags static %}
 
 {% block extra_css %} 
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css" integrity="sha384-Kq/qtF0GiQ2/6OINtNcEzBKp7UVvVXB2xAR2HXOT/D+Qw8+Cx2hfokpqKtPEx0b6" crossorigin="anonymous">
 {% endblock %}
 
@@ -11,231 +10,112 @@
 
 {% block content %}
 
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js" integrity="sha384-54FxFm5+OJnD+IWvK/LQO8Is9GGG3QzyyMPoB69QyvWz1lwLpI9m5y2dWzL8qUMs" crossorigin="anonymous"></script>
-    <div id="page-container" style="width: 100%">
-        <template id="mobile-content">
-            <style>
-            .map {
-            height: 150px;
-            width: 100%;
-            }
-            </style>
-            <a href="{{ page.get_parent.url }}">
-                <div class="premio-back-btn premio-back-btn anm fdr">
-                    <img src="{% static 'img/back.png' %}" width="15px" height="15px"/>
-                </div>
-            </a>
-            <div class="swiper-location-page-images">
-                <div class="swiper-wrapper">
-                    {% for item in page.gallery_images.all %}
-                        <div class="swiper-slide">
-                            {% lazy_image item.image fill-600x600-c100 class="location-page-img lazy" %}
+    <a href="{{ page.get_parent.url }}">
+        <div class="premio-back-btn premio-back-btn anm fdr">
+            <img src="{% static 'img/back.png' %}" width="15px" height="15px"/>
+        </div>
+    </a>
+
+    <div class="swiper-location-page-images">
+        <div class="swiper-wrapper">
+            {% for item in page.gallery_images.all %}
+            <div class="swiper-slide">
+                {% lazy_image item.image fill-600x600-c100 class="location-page-img lazy" %}
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div>
+        <div class="anm fdr">
+            <div class="location-page-content">
+                    <h2><b>{{ page.title }}</b></h2>
+                    <p class="mobile-address-view mt-3"><i>{{ page.address }}</i></p>
+                    {% if page.mon_hours %}
+                        <div id="accordion">
+                            <button class="btn btn-secondary btn-sm" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Operating Hours 
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                                </svg>
+                            </button>
+                            <div id="collapseOne" class="collapse" data-parent="#accordion">
+                                <small class="mt-1">
+                                    Monday: {{ page.mon_hours|richtext }}<br>
+                                    Tuesday: {{ page.tue_hours|richtext }}<br>
+                                    Wednesday: {{ page.wed_hours|richtext }}<br>
+                                    Thursday: {{ page.thu_hours|richtext }}<br>
+                                    Friday: {{ page.fri_hours|richtext }}<br>
+                                    Saturday: {{ page.sat_hours|richtext }}<br>
+                                    Sunday: {{ page.sun_hours|richtext }}<br>
+                                </small>
+                            </div>
                         </div>
+                    {% endif %}
+                    <div class="page-body mt-4 body-font">
+                        {{ page.body|richtext }}
+                    </div>
+            </div>
+            {% if page.lat_long %}
+                <div class="location-map" id="map"></div>
+            {% endif %}
+        </div>
+    </div>
+
+    {% if page.tags.all.count %}
+        <div class="row">
+            <div class="col m-3">
+                <div class="text-center mt-3">
+                    <h5>Tags</h5>
+                    {% for tag in page.tags.all %}
+                        <a href="{% slugurl 'tags' %}?tag={{ tag }}" class="btn btn-primary">{{ tag | title }}</a>
                     {% endfor %}
                 </div>
             </div>
+        </div>
+    {% endif %}
 
-            {% if page.lat_long %}
-                <div class="row">
-                    <div class="row anm fdr" style="width:90vw;">
-                        <div class="col">
-                            <div class="mt-2 ml-4">
-                                <h2><b>{{ page.title }}</b></h2>
-                                <p class="mobile-address-view mt-3"><i>{{ page.address }}</i></p>
-                                {% if page.mon_hours %}
-                                    <div class="operating-hours-mobile" id="accordion">
-                                        <div class="card">
-                                            <div class="card-header text-center card-header-mobile" id="headingOne">
-                                                <h5 class="mb-0">
-                                                    <button style="font-size:12px;" class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                        Operating Hours 
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                                                            <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                                        </svg>
-                                                    </button>
-                                                </h5>
-                                            </div>
-                                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                                                <div class="card-body text-center">
-                                                    <p>
-                                                        <b>
-                                                            Monday: {{ page.mon_hours|richtext }}<br>
-                                                            Tuesday: {{ page.tue_hours|richtext }}<br>
-                                                            Wednesday: {{ page.wed_hours|richtext }}<br>
-                                                            Thursday: {{ page.thu_hours|richtext }}<br>
-                                                            Friday: {{ page.fri_hours|richtext }}<br>
-                                                            Saturday: {{ page.sat_hours|richtext }}<br>
-                                                            Sunday: {{ page.sun_hours|richtext }}<br>
-                                                        </b>
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                {% endif %}
-                                <div class="page-body mt-4 body-font">
-                                    {{ page.body|richtext }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="placeholder-div"></div>
-                    <div class="shadow-lg mx-auto rounded" style="width: 100vw;">
-                        <div class="map" id="map"></div>
-                    </div>
-                </div>
+{% endblock %}
 
-            {% endif %}
-            {% if page.tags.all.count %}
-                <div class="row">
-                    <div class="col m-3">
-                        <div class="text-center mt-3">
-                            <h5>Tags</h5>
-                            {% for tag in page.tags.all %}
-                                <a href="{% slugurl 'tags' %}?tag={{ tag }}" class="btn btn-primary">{{ tag }}</a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-        </template>
-        <template id="desktop-content">
-            <style>
-                .map {
-                height: 300px;
-                width: 100%;
-                }
-            </style>
-            <div class="mt-3 mb-3">
-                <a href="{{ page.get_parent.url }}">
-                    <img class="ml-3" src="{% static 'img/back.png'%}" width="30px" height="30px"/>
-                </a>
-            </div>
-            {% lazy_image page.main_image fill-2000x2000-c100 class="desktop-location-page-img lazy" %}
-            <p class="text-center mt-5 location-title-heading"><b>{{ page.title|richtext }}</b></p>
-            <h3 class="text-center mt-5">{{ page.intro|richtext}}</h3>
-            {% if page.mon_hours %}
-                <div class="operating-hours mt-5" id="accordion">
-                    <div class="card">
-                        <div class="card-header text-center" id="headingOne">
-                            <h5 class="mb-0">
-                                <button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Operating Hours 
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-                                    </svg>
-                                </button>
-                            </h5>
-                        </div>
-                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body text-center">
-                                <p>
-                                    <b>
-                                        Monday: {{ page.mon_hours|richtext }}<br>
-                                        Tuesday: {{ page.tue_hours|richtext }}<br>
-                                        Wednesday: {{ page.wed_hours|richtext }}<br>
-                                        Thursday: {{ page.thu_hours|richtext }}<br>
-                                        Friday: {{ page.fri_hours|richtext }}<br>
-                                        Saturday: {{ page.sat_hours|richtext }}<br>
-                                        Sunday: {{ page.sun_hours|richtext }}<br>
-                                    </b>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-            <div class="mt-5 desktop-page-description text-center">
-                <h5>{{ page.body|richtext }}</h5>
-            </div>
-            <div class="shadow-lg mx-auto rounded" style="width: 100vw;">
-                <div class="mt-5 map" id="map"></div>
-            </div>
-            {% if page.tags.all.count %}
-                <div class="d-flex flex-column justify-content-start align-items-center tags-holder mt-5">
-                    <h5>Tags</h5>
-                    <div class="d-flex flex-row justify-content-around align-items-center tags-row mt-3">
-                        {% for tag in page.tags.all %}
-                            <a href="{% slugurl 'tags' %}?tag={{ tag }}" class="btn btn-primary">{{ tag }}</a>
-                        {% endfor %}
-                    </div>
-                </div>
-            {% endif %}
-        </template>
-    </div>
+{% block extra_js %}
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js" integrity="sha384-54FxFm5+OJnD+IWvK/LQO8Is9GGG3QzyyMPoB69QyvWz1lwLpI9m5y2dWzL8qUMs" crossorigin="anonymous"></script>
+
     <script>
-        var latLong = [{{page.specific.lat_long}}];
-        var longLat = [latLong[1],latLong[0]];
-        var pageContentShown=document.querySelector("#page-container");
-        const isMobile = matchMedia('(max-device-width: 844px)').matches;
-        if(isMobile === true) {
-        var mobileTemplate = document.querySelector("#mobile-content");
-        var clone = mobileTemplate.content.cloneNode(true);
-        pageContentShown.appendChild(clone);
+        // image swiper
         var locationPageImageSwiper = new Swiper('.swiper-location-page-images', {
-            slidesPerView: 1,
-            spaceBetween: 2,
-            effect: 'coverflow',
-            coverflowEffect: {
-            rotate: 50,
-            stretch: 0,
-            depth: 100,
-            modifier: 1,
-            autoplay: {delay: 2},
-            slideShadows: false,
-          },
+                slidesPerView: 1,
+                spaceBetween: 2,
+                effect: 'coverflow',
+                coverflowEffect: {
+                rotate: 50,
+                stretch: 0,
+                depth: 100,
+                modifier: 1,
+                autoplay: {delay: 2},
+                slideShadows: false,
+            },
             pagination: {
-            
-            el: '.swiper-pagination',
-            clickable: true,
+                el: '.swiper-pagination',
+                clickable: true,
             }
         }); 
-        } else {
-        
-        var desktopTemplate=document.querySelector("#desktop-content");
-        var clone=desktopTemplate.content.cloneNode(true);
-        pageContentShown.appendChild(clone);
-        var locationPageImageSwiper = new Swiper('.swiper-location-page-images', {
-            slidesPerView: 1,
-            spaceBetween: 2,
-            effect: 'coverflow',
-            coverflowEffect: {
-            rotate: 50,
-            stretch: 0,
-            depth: 100,
-            modifier: 1,
-            autoplay: {delay: 2},
-            slideShadows: false,
-          },
-            pagination: {
-            
-            el: '.swiper-pagination',
-            clickable: true,
-            }
-        }); 
-        }
+
+        // lazy image loader
         const observer = lozad(".lazy");
         observer.observe();
-          var map = new ol.Map({
-        target: 'map',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.OSM()
-          })
-        ],
-        view: new ol.View({
-          center: ol.proj.fromLonLat(longLat),
-          zoom: 18
-        })
-          });
+
+        // openlayers map
+        var latLong = [{{page.specific.lat_long}}];
+        var longLat = [latLong[1],latLong[0]];
+        var map = new ol.Map({
+            target: 'map',
+            layers: [ new ol.layer.Tile({ source: new ol.source.OSM() }) ],
+            view: new ol.View({ center: ol.proj.fromLonLat(longLat), zoom: 18 })
+        });
         var layer = new ol.layer.Vector({
-         source: new ol.source.Vector({
-         features: [
-             new ol.Feature({
-             geometry: new ol.geom.Point(ol.proj.fromLonLat(longLat))
-             })
-         ]
-         })
+            source: new ol.source.Vector({
+                features: [ new ol.Feature({ geometry: new ol.geom.Point(ol.proj.fromLonLat(longLat)) }) ]
+            })
         });
         map.addLayer(layer);
     </script>
