--- a/locations/templates/locations/location_tag_index_page.html
+++ b/locations/templates/locations/location_tag_index_page.html
@@ -1,35 +1,47 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags static %}
 
 {% block content %}
 
-    {% if request.GET.tag|length %}
-        <div class="row">
-            <div class="col">
-                <h4 class="mt-5 text-center">Showing pages tagged "{{ request.GET.tag }}"</h4>
-            </div>
-        </div>
-    {% endif %}
-
-    <div class="row">
-        {% for page in locationpages %}
-            {% include "location_preview.html" with page=page.specific %}
-        {% empty %}
-            <div class="col">
-                No pages found with that tag.
-            </div>
-        {% endfor %}
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <div class="text-center">
+    <div class="page-container">
+        {% if request.GET.tag|length %}
+            <div class="tags-index-back-bar mt-2 d-flex justify-content-start align-items-center anm fdu">
                 <a href="{{ page.get_parent.url }}">
-                    <button type="button" class="btn btn-outline-primary">Return to {{page.get_parent.title}}</button>
+                    <img src="{% static 'img/back.png' %}" width="30px" height="30px" />
                 </a>
+                <h5 class="mt-2 ml-4">{{ request.GET.tag | title }}</h5>
             </div>
+        {% endif %}
+        
+        <div class="mt-2 tag-index-item anm fdu">
+            {% for page in locationpages %} 
+                <div class="card m-1 glass-body">
+                    <a href="{% pageurl page.specific %}">
+                        {% with page.specific.main_image as main_image %}
+                            {% if main_image %}{% lazy_image main_image fill-500x250-c100 class="card-img-top lazy" %}{% endif %}
+                        {% endwith %}
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ page.specific.title }}</h5>
+                    </div>
+                </div>
+            {% empty %}
+                <div class="col">
+                    No pages found with that tag.
+                </div>
+            {% endfor %}
         </div>
     </div>
-   
+
 {% endblock %}
+
+{% block extra_js %}
+    <script>
+        // lazy image loader
+        const observer = lozad(".lazy");
+        observer.observe();
+    </script>
+{% endblock %}
+
+
