--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -6,78 +6,137 @@
 
 {% block content %}
 
+    <div>
 
-    <h1 class="text-center mt-5">{{ page.title }}</h1>
-
-    <div class="intro">{{ page.intro|richtext }}</div>
-
-    {% if page.promoted_pages.count %}
-        {% if page.promoted_pages_title %}
+        {% if page.promoted_pages.count %}
             <div>
-                <h2 class="text-center mt-5">{{ page.promoted_pages_title }}</h2>
-                {% if page.promoted_pages_intro %}
-                    <div class="intro">{{ page.promoted_pages_intro|richtext }}</div>
-                {% endif %}
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#0d6efd" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                    <path fill="#FFFFFF" fill-opacity="0.1" transform="translate(0 -100)" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,234.7C672,203,768,117,864,74.7C960,32,1056,32,1152,26.7C1248,21,1344,11,1392,5.3L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                </svg> 
+            </div>
+            <div class="promotions-carousel">
+                <div class="content-title-holder mt-2">
+                    <h2 class="ml-4">Promotions</h2>
+                </div>
+                <div class="swiper-promotions-container anm fdu">
+                    <div class="swiper-wrapper"> 
+                        {% for i,p in indexed_promoted_pages %}
+                            {% with p.promoted_page.specific as promoted_page %}
+                                {% include "promotions-carousel.html" with p=p %}
+                            {% endwith %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         {% endif %}
-        <div id="promotedCarousel" class="carousel slide bg-secondary" data-ride="carousel">
-            {% if indexed_promoted_pages|length <= 8 %}
-                <ol class="carousel-indicators">
-                    {% for i,p in indexed_promoted_pages %}
-                        <li data-target="#promotedCarousel" data-slide-to="{{i}}" {% if i == 0 %}class="active"{% endif %}></li>
-                    {% endfor %}
-                </ol>
-            {% endif %}
-            <div class="carousel-inner">
-                {% for i,p in indexed_promoted_pages %}
-                    <div class="carousel-item {% if i == 0 %}active{% endif %}">
-                        {% with p.promoted_page.specific as promoted_page %}
-                            {% with promoted_page.main_image as main_image %}
-                                {% if main_image %}{% image main_image fill-300x150 class="mx-auto d-block" %}{% endif %}
-                            {% endwith %}
-                        {% endwith %}
-                        <div class="carousel-caption d-none d-md-block">
-                            {% if p.caption %}
-                                <h5>{{ p.caption }}</h5>
-                            {% else %}
-                                <h5>{{ p.promoted_page.title }}</h5>
-                            {% endif %}
+
+        {% for tag, pages in locationpagetags.items %}
+            {% if pages.count %}
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#0d6efd" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                        <path fill="#FFFFFF" fill-opacity="0.1" transform="translate(0 -50)" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                    </svg>
+                </div>
+                <div class="tag-content mb-4">
+                    <div class="content-title-holder anm fdu">
+                        <h2 class="ml-4">{{ tag | title }}</h2>
+                        <a class="a-color" href="{% slugurl 'tags' %}?tag={{ tag }}"><p class="mr-3  mt-3">See all</p></a>
+                    </div>
+                    <div class="swiper-container">
+                        <div class="swiper-wrapper">
+                            {% for child in pages %}
+                                {% include "location_preview.html" with page=child.specific %}
+                            {% endfor %}
                         </div>
                     </div>
-                {% endfor %}
-            </div>
-            <a class="carousel-control-prev" href="#promotedCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#promotedCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    {% endif %}
+                </div>
+            {% endif %}
+        {% endfor %}
 
-    {% for tag, pages in locationpagetags.items %}
-        {% if pages.count %}
-            <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}</h2></a>
-            <div class="row">
-                {% for child in pages %}
-                    {% include "location_preview.html" with page=child.specific %}
-                {% endfor %}
+        {% if locationsnearme %}
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#0d6efd" fill-opacity="1" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                    <path fill="#FFFFFF" fill-opacity="0.1" transform="translate(0 -50)" d="M0,64L48,64C96,64,192,64,288,64C384,64,480,64,576,58.7C672,53,768,43,864,48C960,53,1056,75,1152,96C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+                </svg>
+            </div>
+            <div class="tag-content">
+                <div class="content-title-holder">
+                    <h2 class="ml-4">Near Me</h2>
+                </div>
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        {% for page in locationsnearme %}
+                            {% include "location_preview.html" with page=page.specific %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         {% endif %}
-    {% endfor %}
 
-    {% if locationsnearme %}
-        <h2 class="text-center mt-5">Locations Near Me</h2>
-        {% for page in locationsnearme %}
-            <div class="row">
-                {% include "location_preview.html" with page=page.specific %}
-            </div>
-        {% endfor %}
-    {% endif %}
-    
+    </div>
+
+{% endblock %}
+
+{% block extra_js %}
+
     <script>
+        /* setup swipers and lazy loading images */
+
+        function setupContent() {
+            // swipers for tags and near me sections
+            var generalSwiper = new Swiper('.swiper-container', {
+                slidesPerView: 2,
+                spaceBetween: 2,
+                centerInsufficientSlides: true,
+                loop: true,
+                effect: 'coverflow',
+                coverflowEffect: {
+                    rotate: 50,
+                    stretch: 0,
+                    depth: 100,
+                    modifier: 1,
+                    slideShadows: false,
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                }
+            });
+
+            // swiper for promotions
+            var promotionsSwiper = new Swiper('.swiper-promotions-container', {
+                slidesPerView: 1,
+                spaceBetween: 2,
+                effect: 'coverflow',
+                coverflowEffect: {
+                    rotate: 50,
+                    stretch: 0,
+                    depth: 100,
+                    modifier: 1,
+                    autoplay:  {
+                        delay: 1000,
+                    },
+                    slideShadows: false,
+                },
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                }
+            });
+            promotionsSwiper.autoplay.start();
+
+            // lazy image loader
+            const observer = lozad(".lazy");
+            observer.observe();
+        }
+
+        setupContent(); 
+
+        /* cookie helper functions */
+
         function setCookie(name, value, seconds) {
             var expires = "";
             if (seconds) {
@@ -103,6 +162,8 @@
             }
             return null;
         }
+
+        /* set geolocation cookie for 'near me' locations */
 
         function geoLocation(position) {
             console.log('geolocation:' + position);
