Update p css margins

--- a/premio_cms/templates/offline.html
+++ b/premio_cms/templates/offline.html
@@ -19,6 +19,8 @@
     }
     .description {
     font-size: 35px;
+    margin-left: 15%;
+    margin-right: 15%;
     }
 </style>
 <div class="offline-pg-container">
