Move css margins to parent element in offline.html

--- a/premio_cms/templates/offline.html
+++ b/premio_cms/templates/offline.html
@@ -12,15 +12,16 @@
     display: flex;
     flex-direction:column;
     align-items:center;
+    margin-left: 8%;
+    margin-right: 8%;
     }
     p{
     font-color: black;
     font-size: 80px;
+    text-align: center;
     }
     .description {
     font-size: 35px;
-    margin-left: 15%;
-    margin-right: 15%;
     }
 </style>
 <div class="offline-pg-container">
