Revert "Remove unsused tag import in location_page.html"
This reverts commit 37b468daf657af484623f894b9326cf903a54202.

Revert deletion of lazy_image tag in location_page.html

--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags static %}
+{% load wagtailcore_tags wagtailimages_tags lazyimages_tags static %}
 
 {% block extra_css %} 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
@@ -20,7 +20,7 @@
         <div class="swiper-wrapper">
             {% for item in page.gallery_images.all %}
                 <div class="swiper-slide">
-                    {% image item.image fill-600x600-c100 class="location-page-img lazy" %}
+                    {% lazy_image item.image fill-600x600-c100 class="location-page-img lazy" %}
                 </div>
             {% endfor %}
         </div>
