--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="http://127.0.0.1:8000{{ page.custom_css.url }}" media="all"> 
+    <div>
+
+        <link rel="stylesheet" href="http://127.0.0.1:8000{{ page.custom_css.url }}" media="all"> 
         {% if page.promoted_pages.count %}
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
