--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -4,6 +4,9 @@
 
 {% block extra_css %} 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    {% if parentpage.custom_css %}
+        <link rel="stylesheet" href="{{ parentpage.custom_css.url }}" media="all"> 
+    {% endif %}
 {% endblock %}
 
 {% block body_class %}template-locationpage{% endblock %}
