--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -297,7 +297,8 @@ body {
     box-shadow:0 2px 8px 0 rgba(31,38,135,0.37);
     backdrop-filter:blur(1.0px);
     -webkit-backdrop-filter:blur(1.0px);
-    border-radius:10px
+    border-radius:10px;
+    width: 100%;
 }
 
 h1,h2,h3,h4,h5,h6,p,a,div {
